errors.txt
    Checking sentinel-rust v5.0.0-pro.alpha.1 (C:\Users\Sergio\Documents\dev\sentinel-pro)
warning: unused import: `context::ContextBuilder`
 --> src\kb\mod.rs:5:9
  |
5 | pub use context::ContextBuilder;
  |         ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `indexer::CodeIndex`
 --> src\kb\mod.rs:6:9
  |
6 | pub use indexer::CodeIndex;
  |         ^^^^^^^^^^^^^^^^^^

error[E0658]: use of unstable library feature `str_as_str`
  --> src\kb\indexer.rs:77:76
   |
77 |             let kind = match query.capture_names()[capture.index as usize].as_str() {
   |                                                                            ^^^^^^
   |
   = note: see issue #130366 <https://github.com/rust-lang/rust/issues/130366> for more information

For more information about this error, try `rustc --explain E0658`.
warning: `sentinel-rust` (bin "sentinel-rust") generated 2 warnings
error: could not compile `sentinel-rust` (bin "sentinel-rust") due to 1 previous error; 2 warnings emitted
